--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<p>Selamat datang di website <br />
 							layanan jasa foto Virtual Tour untuk kota Surabaya dan sekitarnya.<br />
 							Kami adalah tim profesional yang berfokus <br />
-							pada pembuatan foto indoor 260 yang <br />
+							pada pembuatan foto indoor 360 yang <br />
 							berkualitas tinggi dan terpercaya.<br />
 							Segera daftarkan bisnis anda.</p>
 							<ul class="actions special">
@@ -123,7 +123,7 @@
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/JasaVR" target="_blank" class="icon brands fa-facebook-f"><span class="label">FB</span></a></li>
-							<li><a href="https://www.instagram.com/jasastreetview/" target="_blank" class="icon brands fa-instagram"><span class="label">IG</span></a></li>
+							<li><a href="https://www.instagram.com/jasavirtualtour/" target="_blank" class="icon brands fa-instagram"><span class="label">IG</span></a></li>
 							<li><a href="https://wa.me/628999989900" target="_blank" class="icon brands fa-whatsapp"><span class="label">WA</span></a></li>
 							<li><a href="https://www.linkedin.com/company/jasavr-com/" target="_blank" class="icon brands fa-linkedin"><span class="label">linked</span></a></li>
 	
