--- a/images/VT3/index.html
+++ b/images/VT3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Untitled 7</title>
+    <title>Jasa virtual tour - jasavr.com</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="user-scalable=no, initial-scale=0.5, width=device-width, viewport-fit=cover" />
     <link rel="preload" href="script.js?v=1705753134848" as="script"/>
