--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 							</header>
 							<ul class="actions stacked">
 								<li><a href="https://drive.google.com/drive/folders/1JXrGRnalDtloMpJL_1o2NzCsbLxJYOGD" target="_blank"" class="button primary">Brosur</a></li>
-								<li><a href="https://360maps.github.io/jasavr/demo-google-maps.html" target="_blank"" class="button primary">Demo Google Maps</a></li>
-								<li><a href="https://360maps.github.io/jasavr/demo-virtual-tour.html" target="_blank"" class="button primary">Demo Virtual Tour</a></li>
+								<li><a href="https://360maps.github.io/jasavr/demo-google-maps.html" target="_blank"" class="button">Demo Google Maps</a></li>
+								<li><a href="https://360maps.github.io/jasavr/demo-virtual-tour.html" target="_blank"" class="button">Demo Virtual Tour</a></li>
 							</ul>
 						</div>
 					</section>
