--- a/demo-virtual-tour.html
+++ b/demo-virtual-tour.html
@@ -26,7 +26,7 @@
 
 
 					<section id="one" class="wrapper style1 special">
-								<p>SOON</p>
+								<p>Taman Suroboyo<br/><a href="https://360maps.github.io/jasavr/images/VT3/index.html"/><img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-suroboyo.jpg"/></a></p>
 					</section>
 
 					<section id="two" class="wrapper style2 special">
