--- a/demo-virtual-tour.html
+++ b/demo-virtual-tour.html
@@ -28,13 +28,17 @@
 					<section id="one" class="wrapper style1 special">
 								<p>Taman Suroboyo<br/>
 									<a href="https://360maps.github.io/jasavr/images/VT3/index.html"/>
-										<img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-suroboyo.jpg" width="90%" />
+									<img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-suroboyo.jpg" width="90%" />
 									</a>
 								</p>
 					</section>
 
 					<section id="two" class="wrapper style2 special">
-								<p>SOON</p>
+								<p>Taman Lalu Lintas - Joyoboyo<br/>
+									<a href="https://360maps.github.io/jasavr/images/VT2/index.html"/>
+									<img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-lalu-lintas.jpg" width="90%" />
+									</a>
+								</p>
 					</section>
 
 					<section id="three" class="wrapper style3 special">
