--- a/demo-virtual-tour.html
+++ b/demo-virtual-tour.html
@@ -28,7 +28,7 @@
 					<section id="one" class="wrapper style1 special">
 								<p>Taman Suroboyo<br/>
 									<a href="https://360maps.github.io/jasavr/images/VT3/index.html"/>
-									<img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-suroboyo.jpg" width="90%" />
+									<img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-suroboyo.jpg" alt="virtual tour taman suroboyo kenjeran" width="90%" />
 									</a>
 								</p>
 					</section>
@@ -36,7 +36,7 @@
 					<section id="two" class="wrapper style2 special">
 								<p>Taman Lalu Lintas - Joyoboyo<br/>
 									<a href="https://360maps.github.io/jasavr/images/VT2/index.html"/>
-									<img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-lalu-lintas.jpg" width="90%" />
+									<img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-lalu-lintas.jpg" alt="virtual tour taman lalu lintas joyoboyo surabaya" width="90%" />
 									</a>
 								</p>
 					</section>
