--- a/demo-virtual-tour.html
+++ b/demo-virtual-tour.html
@@ -19,7 +19,7 @@
 
 					<section id="banner">
 						<div class="inner">
-							<img src="images/logo-jasavr.svg" width="30%" />
+							<a href="https://jasavr.com"/><img src="images/logo-jasavr.svg" width="30%" alt="jasa 360 google maps"/></a>
 						</div>
 						<p><br /><br /><br />Sample foto 360 <br />di Virtual Tour</p>
 					</section>
