--- a/demo-virtual-tour.html
+++ b/demo-virtual-tour.html
@@ -26,7 +26,7 @@
 
 
 					<section id="one" class="wrapper style1 special">
-								<p>Taman Suroboyo<br/>
+								<p>Taman Suroboyo (HDR on)<br/>
 									<a href="https://360maps.github.io/jasavr/images/VT3/index.html"/>
 									<img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-suroboyo.jpg" alt="virtual tour taman suroboyo kenjeran" width="90%" />
 									</a>
@@ -34,7 +34,7 @@
 					</section>
 
 					<section id="two" class="wrapper style2 special">
-								<p>Taman Lalu Lintas - Joyoboyo<br/>
+								<p>Taman Lalu Lintas - Joyoboyo (HDR on, Information on)<br/>
 									<a href="https://360maps.github.io/jasavr/images/VT2/index.html"/>
 									<img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-lalu-lintas.jpg" alt="virtual tour taman lalu lintas joyoboyo surabaya" width="90%" />
 									</a>
@@ -42,7 +42,11 @@
 					</section>
 
 					<section id="three" class="wrapper style3 special">
-								<p>SOON</p>
+								<p>Honda Mitra Gresik (HDR off, Audio ON)<br/>
+									<a href="https://360maps.github.io/jasavr/images/VT4/index.html"/>
+									<img src="https://360maps.github.io/jasavr/images/virtual-tour-HMG.jpg" alt="virtual tour honda mitra gresik" width="90%" />
+									</a>
+								</p>
 					</section>
 
 
