--- a/demo-virtual-tour.html
+++ b/demo-virtual-tour.html
@@ -51,7 +51,11 @@
 
 
 					<section class="wrapper style4 special">
-							<p>SOON</p>
+								<p>Taman Surya - Night (HDR off, Audio ON)<br/>
+									<a href="https://360maps.github.io/jasavr/images/VT5/index.html"/>
+									<img src="https://360maps.github.io/jasavr/images/virtual-tour-taman-surya.jpg" alt="virtual tour taman surya" width="90%" />
+									</a>
+								</p>
 					</section>
 
 					<footer id="footer">
